LPS-109267 Fix topper z-index

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/Topper.scss
@@ -60,7 +60,7 @@
 		opacity: 1;
 		transform: translateY(1px);
 		transition-delay: 0.3s;
-		z-index: 3;
+		z-index: $portletTopperZIndex + 1;
 	}
 
 	&.hovered:after {
